--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </header>
 		<div class="container">
     <section class="hero-image">
-      <h1 class="heading">Aralbaev Niyaz</h1>
+      <h1 class="heading">Я ЛЮБЛЮ ТЕБЯ МОЯ*****</h1>
+	  <img src="img/maya.jpg">
       <p>Junior верстальщик</p>
     </section>
 
